--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-DB_HOST=localhost:3306
-DB_USER=root
-DB_PASS=password
-API_KEY=200742224-45c1c41e3827ee94806c067e071dd6ae
+MONGODB_URI=mongodb://mightymountaineer:$25PQSvG!*@qwKfsTdD%b&iT@ds019471.mlab.com:19471/heroku_5g3wm9df
+REACT_APP_REI_API_KEY=200742224-45c1c41e3827ee94806c067e071dd6ae
