--- a/create-react-express/client/package.json
+++ b/create-react-express/client/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "rambler",
+  "name": "mern",
   "version": "0.1.0",
+  "description": "Mern Demo",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -9,6 +11,7 @@
     "axios": "^0.19.2",
     "bulma": "^0.8.2",
     "mongoose": "^5.9.11",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
@@ -18,11 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
