updated folder structure to MERN stack. may this push have mercy on our souls

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "rambler",
   "version": "0.1.0",
-  "description": "Mern Demo",
+  "description": "",
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
