--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.12",
-    "dotenv": "^8.2.0"
+    "query-string": "^6.12.1"
   }
 }
