--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.12",
-    "query-string": "^6.12.1"
+    "mongoose": "^5.9.12"
   }
 }
