--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.12"
+    "mongoose": "^5.9.12",
+    "react-google-login": "^5.1.14"
   }
 }
