--- a/package.json
+++ b/package.json
@@ -17,21 +17,18 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bulma": "^0.8.2",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
-<<<<<<< HEAD
-    "if-env": "^1.0.4",
-    "passport": "^0.4.1"
-=======
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "react-google-login": "^5.1.14"
->>>>>>> 23a1455ecc8b4dc4a5c6687fcf31a40681070d45
   }
 }
