--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-vis": "^1.11.7",
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
