--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "bulma": "^0.8.2",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "moment": "^2.26.0",
     "mongoose": "^5.9.11",
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-vis": "^1.11.7",
