--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bulma": "^0.8.2",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
@@ -30,6 +31,8 @@
     "mongoose": "^5.9.13",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "react-google-login": "^5.1.14"
+    "react-google-login": "^5.1.14",
+    "request": "^2.88.2",
+    "require": "^2.4.20"
   }
 }
